// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Satellite component renders correctly with alternate props 1`] = `
<div
  className="orbit orbit-2"
  id="orbit-test-id"
>
  <div
    className="satellite satellite-2-3"
    id="test-id"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255, 205, 155, 0.5)",
        "boxShadow": "0 0 1rem rgba(255, 205, 155, 0.5)",
        "color": "#000000",
      }
    }
  >
    <p
      className="satellite-label"
    />
  </div>
</div>
`;

exports[`Satellite component renders correctly with default props 1`] = `
<div
  className="orbit orbit-1"
  id="orbit-test-id"
>
  <div
    className="satellite satellite-1-1"
    id="test-id"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "boxShadow": undefined,
        "color": "#FFFFFF",
      }
    }
  >
    <p
      className="satellite-label"
    />
  </div>
</div>
`;
